--- a/templates/products_comparison.html.twig
+++ b/templates/products_comparison.html.twig
@@ -142,16 +142,10 @@
 </select>
 </th></tr><tr><td  style="text-align: center; font-size:15px" colspan="3"><span id="compInfo"></span></table>
 
-
       <div id="map" class="map" >
-      <input id="swipe" type="range" style="width: 100%; margin-bottom:10px; margin: 0px">
+      <div id="slider"><span><strong>Product One</strong></span><input id="swipe" type="range" style="width: 80%; margin-bottom:10px; margin: 0px"><span><strong>Product Two</strong></span></div>
       </div>
-      <br/>
-      <p>This tool will compare two S2 products, for a selected tile. Users can compare different times and different composites. To use the tool:</p>
-      <ul><li>Select a tile either from the list provided or by clicking on the map.</li>
-      <li>Select the dates from the available lists provided for the two products.</li>
-      <li>Move the slider on the top using the button on the bar to compare the images.</li>
-      </ul><p>To show/hide layers use the Layer Switcher icon on the top right of the map.</p>
-      <p><strong><em>This is a test page and the service is still under developement.</em></strong></p>
+      <br>
+      {{ helptext }}
 </div>
 </article>
