Add norwegian translation template

--- a/templates/products_comparison_nb.html.twig
+++ b/templates/products_comparison_nb.html.twig
@@ -144,7 +144,7 @@
 </th></tr><tr><td  style="text-align: center; font-size:15px" colspan="3"><span id="compInfo"></span></table>
 
       <div id="map" class="map" >
-      <div id="slider"><span><strong>Product One</strong></span><input id="swipe" type="range" style="width: 80%; margin-bottom:10px; margin: 0px"><span><strong>Product Two</strong></span></div>
+      <div id="slider"><span><strong>Produkt én</strong></span><input id="swipe" type="range" style="width: 80%; margin-bottom:10px; margin: 0px"><span><strong>Produkt to</strong></span></div>
       </div>
       <br>
       {{ helptext }}
