Updated comparison module for Drupal 10. Fixed bugs. Added composer.json. Added phpcs.xml. Fixed coding standards. Bumped module version

--- a/templates/products_comparison_nb.html.twig
+++ b/templates/products_comparison_nb.html.twig
@@ -123,7 +123,7 @@
  <option value=0.6 ><60%</option>
  <option value=0.7 ><70%</option>
  <option value=0.8 ><80%</option>
- <option value=0.1 ><10%</option>
+ <option value=0.9 ><90%</option>
 </select>
 </th><th><span style="display:inline-block; width: 1.5em;"></span><select class="drop-selection" id="productOne" name="pr1">
 <option value=None selected="selected">YYYY/MM/DD - THHMMSS</option>
@@ -143,7 +143,7 @@
 </select>
 </th></tr><tr><td  style="text-align: center; font-size:15px" colspan="3"><span id="compInfo"></span></table>
 
-      <div id="map" class="map" >
+      <div data-product-comparison id="map" class="map" >
       <div id="slider"><span><strong>Produkt én</strong></span><input id="swipe" type="range" style="width: 80%; margin-bottom:10px; margin: 0px"><span><strong>Produkt to</strong></span></div>
       </div>
       <br>
